syntax = "proto3";

package admin.freelancers.network.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "api/admin/freelancers/network/v1";

service FreelancerAdminNetworksService {
  rpc GetNetworks(GetNetworksRequest) returns (GetNetworksResponse) {
    option (google.api.http) = {get: "/api/v1/admin/freelancers/social_networks"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Получение специальностей фрилансеров"};
  }
}

message SocialNetwork {
  int64 id = 1;
  string name = 2;
}

message GetNetworksRequest {}

message GetNetworksResponse {
  repeated SocialNetwork social_networks = 1;
}
